src/test/deca/syntax/invalid/LE/return1.deca
// Historique:
//    cree le 19/01/2022

class C1 {
    int a ;

    int meth2() {
        return ;
    }
}

{
    C1 variable = new C1 () ;
    
}